# Library-Management-System

./: CMakeLists.txt  vcpkg.json
aggregator/: CMakeLists.txt  connector.hpp  main.cpp  ms-router.hpp
api-gateway/: CMakeLists.txt  gateway.hpp  main.cpp
book-management/: CMakeLists.txt  main.cpp
book-management/application/: book-management-service.hpp
book-management/domain/: book-factory.hpp  book-repository.hpp  book-service.hpp  book.hpp
book-management/library-dto/: library-dto-assembler.hpp
book-management/library-dto/request/: add-book-request.hpp
book-management/library-dto/response/: get-all-books-response.hpp
libs/: rabbit-mq-adapter.hpp  rabbit-mq-connection-handler.hpp
user-management/: CMakeLists.txt  main.cpp
user-management/application/: user-management-service.hpp
user-management/domain/: user-factory.hpp  user-repository.hpp  user-service.hpp  user.hpp
user-management/user-dto/: user-dto-assembler.hpp
user-management/user-dto/request/: add-user-request.hpp
